# 202509-aws-genai-workshop

./: .gitignore  0-setup-weaviate-aws.yaml  0-setup-weaviate.yaml  0-setup.ipynb  1.2-query-complete.ipynb  3.1-rag-basic-complete.ipynb  4.1-multimodal-retrieval.ipynb  9-setup-ownaccount.yaml  README.md  docker-compose.yaml  pdf_to_md.py  pyproject.toml  requirements.txt  upload_collection_script.py
agents/: lesson-1.ipynb  lesson-2.ipynb  lesson-3.ipynb  weaviate_connect.py  weaviate_util.py
agents/complete/: currency_exchange.py  lesson-1.ipynb  lesson-2.ipynb  lesson-3.ipynb  weaviate_util.py
data/parsed/: amazon-2025-08-8k-excerpts-parsed-text.md  (+3 more)
multimodal-rag/: 0-setup.ipynb  0.1-demo-preview.ipynb  1.1-load-data-complete.ipynb  1.1-load-data.ipynb  1.2-query-complete.ipynb  1.2-query.ipynb  1.3-explain-vectors-complete.ipynb  1.3-explain-vectors.ipynb  1.4-rag-basic-complete.ipynb  1.4-rag-basic.ipynb  2.1-byov.ipynb  2.1-rag-and-chunking-complete.ipynb  2.1-rag-and-chunking.ipynb  2.1-working-with-long-texts-complete.ipynb  2.1-working-with-long-texts.ipynb  2.2-multimodal-rag-complete.ipynb  2.2-multimodal-rag-demo.ipynb  2.2-multimodal-rag.ipynb  2.3-multimodal-rag-complete.ipynb  2.3-multimodal-rag.ipynb  2.3-pages-as-images-complete.ipynb  2.3-pages-as-images.ipynb  2.4-pages-as-images-complete.ipynb  3.2-working-with-long-texts.ipynb  4.1-multimodal-retrieval.ipynb  4.2-multimodal-rag.ipynb  4.3-pages-as-images-complete.ipynb  4.3-pages-as-images.ipynb  generate_student_notebooks.py  helpers.py  pdf_to_img.py  pdf_to_md_w_imgs.py  prep-fin-dataset.py
(+1 files in other folders)
