[project]
name = "202509-aws-genai-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.24",
    "chonkie>=1.2.1",
    "datasets>=4.0.0",
    "docling>=2.50.0",
    "jupyterlab>=4.4.7",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pymupdf>=1.26.4",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "weaviate-client>=4.16.9",
]
